force-app/main/default/objects/Technician__c/Technician__c.object-meta.xml
<CustomObject>
    <description>A person who can be dispatched to a job. Deliberately not the standard User object: roughly half of Meridian's field workforce are subcontractors who never log in, but still need licences tracked and jobs assigned to them.</description>
    <label>Technician</label>
    <nameField>
        <label>Technician Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technicians</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>