force-app/main/default/objects/Technician__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Currently on the roster. Inactive technicians are excluded from dispatch by the Phase 5 validation rule rather than deleted.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>