force-app/main/default/objects/Technician__c/fields/Base_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Base_Suburb__c</fullName>
    <description>Where the technician starts the day. Used for the travel-distance analysis in Phase 13.</description>
    <label>Base Suburb</label>
    <length>80</length>
    <type>Text</type>
</CustomField>