force-app/main/default/objects/Technician__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Contact email for job dispatch notifications.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>