force-app/main/default/objects/Technician__c/fields/Hourly_Charge_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Charge_Rate__c</fullName>
    <description>Rate charged to the customer, not the rate paid to the technician. Kept separate so cost data can stay out of the field-facing page layout.</description>
    <label>Hourly Charge Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>