force-app/main/default/objects/Technician__c/fields/Licence_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Licence_Expiry__c</fullName>
    <description>Licence expiry date. The Phase 11 scheduled flow warns on this 30 days out.</description>
    <label>Licence Expiry</label>
    <type>Date</type>
</CustomField>