force-app/main/default/objects/Technician__c/fields/Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>Licence_Number__c</fullName>
    <description>NSW Fair Trading licence number. Unique - two technicians sharing a licence number means one of the records is wrong.</description>
    <label>Licence Number</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>