force-app/main/default/objects/Technician__c/fields/Licence_Status__c.field-meta.xml
<CustomField>
    <fullName>Licence_Status__c</fullName>
    <description>Human-readable licence state derived from the expiry date. Unknown is treated as a defect, not a neutral value.</description>
    <formula>IF(ISBLANK(Licence_Expiry__c), "Unknown",
IF(Licence_Expiry__c &lt; TODAY(), "Expired",
IF(Licence_Expiry__c &lt; TODAY() + 30, "Expiring soon",
"Current")))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Licence Status</label>
    <type>Text</type>
</CustomField>