force-app/main/default/objects/Technician__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Mobile number. Stored in a Phone field rather than Text so Salesforce formats it consistently - the legacy spreadsheet held five different formats.</description>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>