force-app/main/default/objects/Technician__c/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <description>Trades this person is qualified to work in. Multi-select because dual-ticketed technicians are the most valuable people on the roster.</description>
    <label>Trades</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>