force-app/main/default/objects/Technician__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the technician to a login where one exists. Blank for subcontractors - which is exactly why Technician is its own object.</description>
    <inlineHelpText>Leave blank for subcontractors who do not have a Salesforce login.</inlineHelpText>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Technician Records</relationshipLabel>
    <relationshipName>Technician_Records</relationshipName>
    <type>Lookup</type>
</CustomField>