force-app/main/default/objects/Technician__c/listViews/Active_Technicians.listView-meta.xml
<ListView>
    <fullName>Active_Technicians</fullName>
    <columns>NAME</columns>
    <columns>Trade__c</columns>
    <columns>Employment_Type__c</columns>
    <columns>Licence_Number__c</columns>
    <columns>Licence_Expiry__c</columns>
    <columns>Licence_Status__c</columns>
    <columns>Mobile__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Technician__c.Active__c</field>
        <operation>equals</operation>
        <value>true</value>
    </filters>
    <label>Active Technicians</label>
</ListView>