force-app/main/default/objects/Technician__c/listViews/Licence_Attention.listView-meta.xml
<ListView>
    <fullName>Licence_Attention</fullName>
    <columns>NAME</columns>
    <columns>Trade__c</columns>
    <columns>Licence_Number__c</columns>
    <columns>Licence_Expiry__c</columns>
    <columns>Licence_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Technician__c.Licence_Expiry__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Licence Attention</label>
</ListView>